--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,9 @@
 
    <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
    <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-firestore.js"></script>
- 
+   
+   <script src="/__/firebase/7.6.1/firebase-app.js"></script>
+   <script src="/__/firebase/7.6.1/firebase-firestore.js"></script>
    <!-- Previously loaded Firebase SDKs -->
  
    <script>
@@ -36,9 +38,11 @@
       messagingSenderId: "895851012990",
       appId: "1:895851012990:web:3a3b3ae5f3d2a568dec92f"
     };
- 
-     // Initialize Firebase
+
+    if (!firebase.apps.length) {
      firebase.initializeApp(firebaseConfig);
+    }
+     // Initialize Firebase
    </script>
    <!-- Initialize Firebase -->
    <script src="/__/firebase/init.js"></script>
